--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-/* Slider testimonials*/
+hr{
+  margin: 100px auto;
+  width: 100%;
+}
+/* 1 Slider testimonials*/
 .testimonials-slider {
   display: flex;
   padding: 40px 0;
@@ -84,11 +88,11 @@
   opacity: 0.8;
 }
 
-/*Video slider*/
+/* 2 Video slider*/
 .video-slider-themename {
   width: 100%;
   height: 400px;
-  background-image: url(img/slider-bg.png);
+  /* background-image: url(img/slider-bg.png); */
   border-radius: 12px;
   position: relative;
   overflow: hidden;
@@ -145,7 +149,7 @@
 	left: 5%;
 
 }
-.slides-control-wrapper span{
+.slides-control-wrapper span , .nth-slides-control-wrapper span{
 	width: 8px;
 	height: 8px;
 	margin-right: 16px;
@@ -154,15 +158,16 @@
 	border-radius: 50%;
 	cursor: pointer;
 }
-.slides-control-wrapper span.active-point{
+.slides-control-wrapper span.active-point,
+.nth-slides-control-wrapper span.active-point{
 	background: linear-gradient(180deg, #E26969 0%, #E73331 100%);
 }
 @media (max-width: 1439px){
-	/*Video slider*/
+
 .video-slider-themename {
   width: 100%;
   height: 800px;
-  background-image: url(img/slider-bg-mob.png);
+  /* background-image: url(img/slider-bg-mob.png); */
   border-radius: 12px;
 
 }
@@ -218,17 +223,6 @@
 	left: 5%;
 
 }
-.slides-control-wrapper span{
-	width: 8px;
-	height: 8px;
-	margin-right: 16px;
-	background: #171E37;
-	display: inline-block;
-	border-radius: 50%;
-}
-.slides-control-wrapper span.active-point{
-	background: linear-gradient(180deg, #E26969 0%, #E73331 100%);
-}
 }
 
 @media (max-width: 1024px) {
@@ -252,4 +246,33 @@
   		height: 600px;
 
 	}
+}
+
+
+
+
+/* 3 nth slides slider*/
+.nth-item-slider{
+  overflow: hidden;
+}
+.nth-item-slider-wrapper{
+  display: flex;
+  width: 100%;
+  transition:all 0.2 ease-out;
+  margin-bottom: 20px;
+}
+.slider-slide{
+  /* min-width: 400px; */
+  overflow: hidden;
+}
+.slider-slide img{
+  width: 100%;
+}
+.slider-slide:nth-child(n + 2){
+  margin-left: 20px;
+}
+.nth-slides-control-wrapper{
+  display: flex;
+  justify-content: center;
+
 }
